--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+@font-face {
+  font-family: 'fuenteNova';
+  src: url('./assets/SYNNova-Regular.otf');
+  font-weight: normal;
+  font-style: normal;
+}
 
 body{
   max-width: 100%;
